# uptrace-python

./: .deepsource.toml  .gitignore  .isort.cfg  .prettierrc  .prettierrc.yml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASING.md  dev-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  python.yml
docs/superpowers/plans/: 2026-04-16-migrate-setup-py-to-pyproject-toml.md
docs/superpowers/specs/: 2026-04-16-migrate-setup-py-to-pyproject-toml-design.md
example/basic/: Makefile  README.md  main.py  requirements.txt  run.py
example/django/: Makefile  README.md  manage.py  requirements.txt
example/django-postgresql/: README.md  manage.py  requirements.txt
example/django-postgresql/djangoex/: docker-compose.yml  settings.py  urls.py  wsgi.py
example/django-postgresql/otel/: apps.py  views.py
example/django/django_postgres/: __init__.py
example/django/djangoex/: asgi.py
example/django/otel/: views.py
example/django/otel/templates/: hello.html  index.html
example/django/polls/: views.py
example/django/polls/migrations/: 0001_initial.py
example/django/polls/static/polls/: style.css
example/django/polls/templates/polls/: index.html  results.html
example/django_postgres/: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  requirements.txt
example/django_postgres/django_postgres/: asgi.py  settings.py  urls.py  wsgi.py
example/django_postgres/polls/templates/polls/: detail.html
example/djangoex/: Makefile  README.md
example/djangoex/djangoex/: settings.py
example/djangoex/otel/: urls.py  views.py
example/fastapi/: Makefile  README.md  client.py  main.py  requirements.txt
example/flask/: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  exts.py  main.py  models.py  requirements.txt
example/flask-auto-instrumentation/: Makefile  README.md  main.py  requirements.txt
example/flask-gunicorn/: README.md  gunicorn.config.py  main.py  requirements.txt
example/flask-uwsgi/: README.md  main.py  requirements.txt
example/grpc/: README.md  client.py  client_interceptor.py  requirements.txt  server.py  server_interceptor.py
example/metrics/: README.md  main.py
example/otel-api/: README.md  main.py
example/otlp/: README.md  main.py  requirements.txt
example/otlp-logs/: Makefile  README.md  main.py  requirements.txt
example/otlp-metrics/: README.md  main.py  requirements.txt
example/otlp-traces/: README.md  main.py  requirements.txt
example/otlp-traces-http/: README.md  main.py  requirements.txt
example/pyramid/: Makefile  README.md  main.py  requirements.txt
src/uptrace/: __init__.py  client.py  config.py  distro.py  dsn.py  id_generator.py  logs.py  metrics.py  traces.py  uptrace.py  util.py  version.py
src/uptrace/spanexp/: __init__.py  exporter.py
src/uptrace/trace/: __init__.py  exporter.py
test/: test_client.py  test_exporter.py  test_uptrace.py
