[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uptrace"
description = "OpenTelemetry Python distribution for Uptrace"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
    { name = "Uptrace.dev", email = "support@uptrace.dev" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-api ~= 1.41.0",
    "opentelemetry-sdk ~= 1.41.0",
    "opentelemetry-exporter-otlp ~= 1.41.0",
    "opentelemetry-instrumentation ~= 0.62b0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://uptrace.dev"
Repository = "https://github.com/uptrace/uptrace-python"

[project.entry-points.opentelemetry_distro]
uptrace_distro = "uptrace.distro:UptraceDistro"

[tool.hatch.version]
path = "src/uptrace/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/uptrace"]
