[metadata]
name = uptrace
description = Uptrace client for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Uptrace.dev
author_email = support@uptrace.dev
url = https://uptrace.dev
platforms = any
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    opentelemetry-api==1.3.0
    opentelemetry-sdk==1.4.0
    opentelemetry-instrumentation == 0.22b0
    msgpack==1.0.2
    zstd==1.5.0.2
    requests==2.25.1

[options.packages.find]
where = src
include = *

[options.entry_points]
opentelemetry_distro =
    uptrace_distro = uptrace.distro:UptraceDistro
opentelemetry_exporter =
    uptrace_span = uptrace.spanexp:UptraceSpanExporter

[aliases]
test=make test
