[metadata]
name = uptrace
description = OpenTelemetry Python distribution for Uptrace
long_description = file: README.md
long_description_content_type = text/markdown
author = Uptrace.dev
author_email = support@uptrace.dev
url = https://uptrace.dev
platforms = any
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
python_requires = >=3.8
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    opentelemetry-api>=1.28.2,<1.30.0
    opentelemetry-sdk~=1.28.2
    opentelemetry-exporter-otlp~=1.28.2
    opentelemetry-instrumentation~=0.49b2

[options.packages.find]
where = src
include = *

[options.entry_points]
opentelemetry_distro =
    uptrace_distro = uptrace.distro:UptraceDistro

[aliases]
test=make test
